--- a/pom.xml
+++ b/pom.xml
@@ -26,5 +26,6 @@
       <artifactId>mockito-all</artifactId>
       <version>1.10.19</version>
       <scope>test</scope>
-    </dependency>  </dependencies>
+    </dependency>
+  </dependencies>
 </project>
